--- a/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/security/login.vm
+++ b/dhis-2/dhis-web/dhis-web-commons-resources/src/main/webapp/dhis-web-commons/security/login.vm
@@ -71,11 +71,11 @@
             #if( $failed == true )
             <div id="loginMessage">Wrong username or password</div>
             #end
-            <div id="notificationArea">
+<!--            <div id="notificationArea">
               #if ( $keyApplicationNotification )
                 $!{keyApplicationNotification}
               #end
-            </div>
+            </div>-->
             <!--[if lte IE 8]>
             <div id="notificationArea" style="color: white; background-color: red;">$i18n.getString( "unsupported_browser" )</div>
             <![endif]-->
