--- a/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/addUserForm.vm
+++ b/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/addUserForm.vm
@@ -272,18 +272,13 @@ div#orgUnitTree
      });
 
       var validate_phone_number = function (elelment_type) {
-        $(elelment_type).keyup(function(){
+        $(elelment_type).one('keyup', function(){
           var tele = $(elelment_type).val();
 
           var is_match = tele.match(/^([+|\d])+([\s|\d])+([\d])$/);
           if (!is_match)
           {
-
-            $("span"+ elelment_type +"Var").text("Please enter a valid telephone number.");
-          }
-          else
-          {
-            $("span"+ elelment_type +"Var").text("");
+            $(elelment_type).after('<span for="' + elelment_type + '" generated="true" class="error">Please enter a valid telephone number.</span>' );
           }
         });
 
