--- a/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/addUserForm.vm
+++ b/dhis-2/dhis-web/dhis-web-maintenance/dhis-web-maintenance-user/src/main/webapp/dhis-web-maintenance-user/addUserForm.vm
@@ -278,7 +278,7 @@ div#orgUnitTree
           var is_match = tele.match(/^([+|\d])+([\s|\d])+([\d])$/);
           if (!is_match)
           {
-            $(elelment_type).after('<span for="' + elelment_type + '" generated="true" class="error">Please enter a valid telephone number.</span>' );
+            $(elelment_type).after('<br /><span for="' + elelment_type + '" generated="true" class="error">Please enter a valid telephone number.</span>' );
           }
         });
 
